# ChangeLog for virtual/postgresql-base
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-base/ChangeLog,v 1.10 2009/09/07 13:47:11 armin76 Exp $

  07 Sep 2009; Raúl Porcel <armin76@gentoo.org> postgresql-base-8.1.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #268138

  02 Aug 2009; Markus Meier <maekke@gentoo.org> postgresql-base-8.1.ebuild:
  amd64 stable, bug #268138

  31 May 2009; Brent Baude <ranger@gentoo.org> postgresql-base-8.1.ebuild:
  Marking postgresql-base-8.1 ppc64 for bug 268138

  31 May 2009; nixnut <nixnut@gentoo.org> postgresql-base-8.1.ebuild:
  ppc stable #268138

  28 May 2009; Christian Faulhammer <fauli@gentoo.org>
  postgresql-base-8.1.ebuild:
  stable x86, bug 268138

  07 May 2009; Tobias Klausmann <klausman@gentoo.org>
  postgresql-base-8.1.ebuild:
  Stable on alpha, bug #268138

  03 May 2009; Raúl Porcel <armin76@gentoo.org> postgresql-base-8.3.ebuild:
  Add ~s390

  19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
  postgresql-base-7.3.ebuild, postgresql-base-7.4.ebuild,
  postgresql-base-8.0.ebuild, postgresql-base-8.3.ebuild:
  Marked 7.3,7.4,8.0 stable on alpha amd64 arm hppa ia64 ppc ppc64 s390 sh
  sparc x86 since they have dev-db/libpq-{7.3,7.4,8.0} stable. Dropped ~s390
  and ~sparc-fbsd keyword for 8.3 ({postgresql,libs}-8.3 are p.masked
  anyway).

*postgresql-base-8.3 (15 Apr 2008)
*postgresql-base-8.2 (15 Apr 2008)
*postgresql-base-8.1 (15 Apr 2008)
*postgresql-base-8.0 (15 Apr 2008)
*postgresql-base-7.4 (15 Apr 2008)
*postgresql-base-7.3 (15 Apr 2008)

  15 Apr 2008; Tiziano Müller <dev-zero@gentoo.org> +metadata.xml,
  +postgresql-base-7.3.ebuild, +postgresql-base-7.4.ebuild,
  +postgresql-base-8.0.ebuild, +postgresql-base-8.1.ebuild,
  +postgresql-base-8.2.ebuild, +postgresql-base-8.3.ebuild:
  Moved into the tree. Thanks to Michael Krelin (polyonymous).
