@@ -1,4 +1,5 @@
 EBUILD postgresql-base-8.2.ebuild 535 RMD160 63e224fefaa8f7c72b4105f2dc1a02c431abc7fc SHA1 7d7b8bb2538595154c016e507b6cbcf9a5337841 SHA256 fbf849b9287ad792ec5b7d442147f66646c7fd96f0313b39cbc561acd7f7ce1a
 EBUILD postgresql-base-8.3.ebuild 511 RMD160 c6b5ae0b6ca32a78d2a6a26de3cdcf2c5cbc67ba SHA1 58d541d944e79c130f681205e9621ddd4269ff80 SHA256 d62d680128b4d445b7c642cb57a8d9cb4d3d7d065b3afd419bfb3edbe9953e87
-MISC ChangeLog 1910 RMD160 13fafff1620b582acbd361c6f29933d176dd25be SHA1 4b0cea3b516205b9d6d31e3f45b4bbb34c012cbb SHA256 5ea6c343f40fd0f75df41d197eca1e69f98beb67213c546e8e70c3eefe1d3e20
+EBUILD postgresql-base-8.4.ebuild 511 RMD160 d3c6b630c03475e41da2d46185fa151150eea735 SHA1 259de2ddefd9b314462511cde5730357a547568e SHA256 53167cdad9d3c12fbfb7428ca9061aa237880326a4b15989500e0a9fabd8dc25
+MISC ChangeLog 2059 RMD160 23d90f018041840a07bf320a00e8449e39813a6b SHA1 76db565c24860b9c7ad3e7c726d857b5df5300a6 SHA256 a71aa4c0ab12ce036daa921c085738ce9aa29a78e2aa18511a14befcac61accc
 MISC metadata.xml 164 RMD160 becfe652663bd65719dd11fa6ffb588b3d5b4ecc SHA1 f67b7ac1c5e6e65ef5a19a589d4759c84918f86c SHA256 7e8e8126bc8701c4a42c7dfed8bb755ac6040fe3d0e3f994d888f8b2b4fa7d8b
