@@ -1,6 +1,12 @@
 # ChangeLog for virtual/postgresql-base
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-base/ChangeLog,v 1.10 2009/09/07 13:47:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/postgresql-base/ChangeLog,v 1.11 2009/09/09 21:42:12 patrick Exp $
+
+*postgresql-base-8.4 (09 Sep 2009)
+
+  09 Sep 2009; Patrick Lauer <patrick@gentoo.org>
+  +postgresql-base-8.4.ebuild:
+  Bump to 8.4.0. Fixes #276125
 
   07 Sep 2009; Raúl Porcel <armin76@gentoo.org> postgresql-base-8.1.ebuild:
   arm/ia64/s390/sh/sparc stable wrt #268138
